<resources>
    <string name="app_name">Contacts</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_theme">App theme</string>
    <string name="fab_add_contact">Add contact</string>
    <string name="fab_edit_contact">Edit contact</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_first_name">Sort by first name</string>
    <string name="sort_by_last_name">Sort by last name</string>
    <string name="choose_app_theme">Choose app theme</string>
    <string name="icon_phone">Icon phone</string>
    <string name="icon_chat">Icon chat</string>
    <string name="icon_video_call">Icon video call</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="contact_name">%s %s</string>
    <string name="coming_soon">This feature will be implemented soon</string>
    <string name="contact_image">Contact Image</string>
    <string name="btn_change">Change</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_type">Phone type</string>
    <string name="ringtone">Ringtone</string>
    <string name="delete_contact">Delete contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="field_is_blank_or_empty">Field cannot be blank or empty</string>
    <string name="notes">Notes</string>
    <string name="database_error">Database error</string>
    <string name="delete_contact_message">Are you sure you want to delete this contact?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="unsaved_data">All unsaved data will be discarded</string>
    <string name="contacts_list_title">Contact</string>
</resources>