<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.contactDetails.ContactDetailsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/contactImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactImage"
        tools:text="Alicia Malcolm" />

    <ImageView
        android:id="@+id/iconPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icon_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autoLink="phone"
        android:linksClickable="true"
        app:layout_constraintBottom_toTopOf="@+id/iconPhone"
        app:layout_constraintStart_toEndOf="@+id/iconPhone"
        app:layout_constraintTop_toTopOf="@+id/iconPhone"
        tools:text="+7 (906) 911 45 78" />

    <TextView
        android:id="@+id/phoneType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/iconPhone"
        app:layout_constraintStart_toEndOf="@+id/iconPhone"
        app:layout_constraintTop_toBottomOf="@+id/iconPhone"
        tools:text="Mobile" />

    <ImageView
        android:id="@+id/iconChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/icon_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iconPhone"
        app:srcCompat="@drawable/ic_chat_bubble_outline" />

    <ImageView
        android:id="@+id/iconVideoCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/icon_video_call"
        app:layout_constraintEnd_toStartOf="@+id/iconChat"
        app:layout_constraintTop_toTopOf="@+id/iconChat"
        app:srcCompat="@drawable/ic_videocam" />

    <View
        android:id="@+id/firstDivider"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneType" />

    <ImageView
        android:id="@+id/iconEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/icon_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstDivider"
        app:srcCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/iconEmail"
        app:layout_constraintStart_toEndOf="@+id/iconEmail"
        app:layout_constraintTop_toTopOf="@+id/iconEmail"
        tools:text="Alicia666@gmail.com" />

    <TextView
        android:id="@+id/emailType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/iconEmail"
        app:layout_constraintStart_toEndOf="@+id/iconEmail"
        app:layout_constraintTop_toBottomOf="@+id/iconEmail"
        tools:text="Personal" />

    <View
        android:id="@+id/secondDivider"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailType" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/fab_edit_contact"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>